fix: add a step for patching the upgrade script

--- a/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
@@ -31,6 +31,16 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 
 ## Upgrade Webiny Project
 
+:::caution
+Before running the below command, please run the following command from your project root:
+
+```bash
+npx https://gist.github.com/doitadrian/80c1407e3b513f8e1daaf77ae9e4703b
+```
+
+Running this command will apply a minor fix to the `webiny upgrade` command that you're about to execute.
+:::
+
 This release includes a couple of smaller changes on the project organization level. To make it easier, we provide a simple [Webiny CLI](/docs/key-topics/webiny-cli) command that will automatically make all the necessary adjustments for you.
 
 Once you've run the above upgrade command, run the following:
