fix: apply minor rewording

--- a/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
+++ b/docs/how-to-guides/upgrade-webiny/5.4.0-to-5.5.0.mdx
@@ -32,7 +32,7 @@ Once the upgrade has finished, running the `yarn webiny --version` command in yo
 ## Upgrade Webiny Project
 
 :::caution
-Before running the below command, please run the following command from your project root:
+Before running the below `webiny upgrade` command, please run the following from your project root:
 
 ```bash
 npx https://gist.github.com/doitadrian/80c1407e3b513f8e1daaf77ae9e4703b
