--- a/docs/tutorials/create-an-application/securing-your-application.mdx
+++ b/docs/tutorials/create-an-application/securing-your-application.mdx
@@ -13,9 +13,15 @@ import addedSecurityPermissionsGroup from "./securing-your-application/added-sec
 import unprotectedQuery from "./securing-your-application/unprotected-query.png";
 import unprotectedMutation from "./securing-your-application/unprotected-mutation.png";
 import graphqlAuthError from "./securing-your-application/query-auth-error.png";
+import graphqlAuthSuccess from "./securing-your-application/query-auth-success.png";
 import createTestUser from "./securing-your-application/create-test-user.png";
 import newSecurityGroup from "./securing-your-application/new-security-group.png";
 import contentLocaleSection from "./securing-your-application/content-locale-section.png";
+import carManufacturersMenuItem from "./securing-your-application/car-manufacturers-menu-item.png";
+import carManufacturersMenuItemHidden from "./securing-your-application/car-manufacturers-menu-item-hidden.png";
+import routeNotAuthorized from "./securing-your-application/route-not-authorized.png";
+import hidingNewButton from "./securing-your-application/hiding-new-button.png";
+import hidingNewButtonHidden from "./securing-your-application/hiding-new-button-hidden.png";
 
 :::tip What you'll learn
 - what are security permissions and, on the code level, security permissions objects
@@ -37,6 +43,10 @@ Note that in order to implement both behaviours, we are relying on **security pe
 
 :::info
 If you want to learn more about the main GraphQL API and how it works on the cloud infrastructure level, check out the [GraphQL Requests](/docs/key-topics/cloud-infrastructure/api/graphql-requests) page of the [Cloud Infrastructure - API](/docs/key-topics/cloud-infrastructure/api/introduction) key topics section.
+:::
+
+:::warning
+Full Code example link
 :::
 
 ## Security Permissions
@@ -69,7 +79,7 @@ A simple security permission object might look something like the following:
 
 Usually, security permissions are assigned to identities via security groups.
 
-:::info
+:::warning samo admin
 NOTE OVO JE SAMO Admin. Vidi jos gdje staviti ovo, ne mora biti tu.
 :::
 
@@ -81,6 +91,10 @@ This can be seen while creating a new security group via the security groups mod
 
 Internally, making changes in one or more of these sections will result in one or more permission objects to be created. So, once we submit the form, all of the different permission objects that were created in the process, are sent to the GraphQL API and stored in the database (along with other general security group information - name, slug, and description).
 
+:::warning identity-ji
+dodati ovdje da kada kreiramo security group, onda radimo assign grupe na identity-je
+:::
+
 Ultimately, no matter if we're performing authorization on the API side or in the UI, via a couple of built-in Security application's utilities, we can retrieve identity's security group and all of the permissions it contains. With that data, we can then determine whether a user has access to a particular API resource or a section in the UI.
 
 ## Creating Custom Security Permissions
@@ -91,7 +105,7 @@ Continuing with the car manufacturers example that we've used in previous tutori
 
 <CenteredImage alt="Added Security Permissions Group" src={addedSecurityPermissionsGroup} />
 
-To achieve this, within the Admin Area React application, we need to register a new `admin-app-permissions-renderer` plugin, like so:
+To achieve this, within the Webiny Admin Area React application, we need to register the following `admin-app-permissions-renderer` plugin:
 
 ```tsx title="packages/car-manufacturers/admin-app/src/permissions/index.tsx"
 import React, { useCallback, useMemo } from "react";
@@ -190,7 +204,7 @@ export default {
 } as AdminAppPermissionRendererPlugin;
 ```
 
-Feel free to copy and paste the shown code into your project and use it as a starting point. After you do that, just make sure that the plugin is actually registered within the Admin Area React application (`apps/admin/code/src/plugins/index.ts`), otherwise no change will appear in your browser.
+Feel free to copy and paste the shown code into your project and use it as a starting point. And, after you do that, just make sure that the plugin is actually registered in `apps/admin/code/src/plugins/index.ts`, otherwise no change will appear in your browser.
 
 If you've been following the previous two tutorials, then you can simply import it via the `packages/car-manufacturers/admin-app/src/index.ts` file:
 
@@ -203,13 +217,13 @@ import permissions from "./permissions";
 export default (): Plugin[] => [menus(), routes(), permissions];
 ```
 
-By completing this step, we've added the new **Car Manufacturers** permissions section in the security group form. In other words, system administrators can now create new or extend existing security groups, and give access to our new Car Manufacturers module. For example, one security group can allow only reading car manufacturers data, while the other one may allow all three primary actions - read, write, and delete, and even allow access to the imaginary special feature.
+By completing this step, we've added the new **Car Manufacturers** permissions section in the security group form. System administrators can now create new (or extend existing) security groups, and give access to our new Car Manufacturers module. For example, one security group can allow only reading car manufacturers data, while the other one may allow all three primary actions - read, write, and delete, and even allow access to the imaginary special feature.
 
-But note that, nothing will actually happen for identities that have or don't have these newly added permissions in their security group. We still need to implement the actual authorization logic, both on the GraphQL API and Admin Area side, which we cover in the following sections.
-
-Before we continue, now that we have the new security permissions section, let's create the new **Car Manufacturers** security group, that enables full access to our new Car Manufacturers module. We'll need this security group in order to perform some testing down the road.
+Now that we have this new security permissions section, let's create the new **Car Manufacturers** security group, that enables full access to our new Car Manufacturers module. We'll need this security group in order to perform some manual testing down the road.
 
 <CenteredImage alt="New Car Manufacturers Security Group" src={newSecurityGroup} />
+
+Note that, at this point, nothing will actually happen for identities that have or don't have these newly added permissions in their security group. We still need to implement the actual authorization logic, both on the GraphQL API and Admin Area side, which we cover in the following sections.
 
 ### Content Locales
 
@@ -217,20 +231,23 @@ While creating the new Car Manufacturers security group, you might have noticed 
 
 <CenteredImage alt="asd" src={contentLocaleSection} />
 
+:::warning
+dovrsiti temu ovdje
+:::
 
 ## Securing GraphQL API Resolvers
 
-:::tip
+:::warning
 yarn webiny watch negdje ubaciti
 :::
 
-At the moment, the `CarManufacturer` queries and mutations, that we added to our main GraphQL API in the [API Package tutorial](/docs/tutorials/create-an-application/api-package), are publicly exposed.
+At the moment, the `carManufacturers` queries and mutations, that we added to our main GraphQL API in the [API Package tutorial](/docs/tutorials/create-an-application/api-package), are publicly exposed.
 
 For example, if were to perform a simple `listCarManufacturers` GraphQL query, we would receive a list of all car manufacturers:
 
 <CenteredImage alt="Added Security Permissions Group" src={unprotectedQuery} />
 
-Even worse, anybody can create new car manufacturers, with the `createCarManufacturer` GraphQL mutation, like so:
+Even more important, anybody can create new car manufacturers, with the `createCarManufacturer` GraphQL mutation:
 
 <CenteredImage alt="Added Security Permissions Group" src={unprotectedMutation} />
 
@@ -262,9 +279,9 @@ All of the GraphQL resolver functions are located in the `packages/car-manufactu
         └── updateCarManufacturer.ts
 ```
 
-As an example, we can open the simplest resolver, which is the `getCarManufacturer.ts`, and add the following lines of code:
+For purposes of this tutorial, we can open the simplest resolver, which is the `getCarManufacturer.ts`, and add the following lines of code:
 
-```ts title="packages/car-manufacturers/api/src/resolvers/getCarManufacturer.ts" {17-34}
+```ts title="packages/car-manufacturers/api/src/resolvers/getCarManufacturer.ts" {2,17-37}
 import { Response, NotFoundResponse } from "@webiny/handler-graphql";
 import { NotAuthorizedResponse } from "@webiny/api-security";
 
@@ -292,7 +309,10 @@ const getCarManufacturer = async (
     let hasAccess = permission.name === "*";
     if (!hasAccess) {
         // If not super admin, let's check if we have the "r" in the `rwd` property.
-        hasAccess = permission.name === "car-manufacturers" && permission.rwd.includes("r");
+        hasAccess =
+            permission.name === "car-manufacturers" &&
+            permission.rwd &&
+            permission.rwd.includes("r");
     }
 
     // Finally, if current identity doesn't have access, we immediately exit.
@@ -318,7 +338,7 @@ const getCarManufacturer = async (
     const [item] = items;
 
     if (!item) {
-        return new NotFoundResponse(`CarManufacturer with id "${id}" not found.`);
+        return new NotFoundResponse(`Car manufacturer with id "${id}" not found.`);
     }
 
     return new Response(item);
@@ -327,7 +347,7 @@ const getCarManufacturer = async (
 export default getCarManufacturer;
 ```
 
-To see this new piece of authorization logic in action, we can use a GraphQL client, for example the [GraphQL Playground](https://github.com/graphql/graphql-playground), point it to our GraphQL API's URL, and try executing the following query:
+Now, to see this new piece of authorization logic in action, we can use a GraphQL client, for example the [GraphQL Playground](https://github.com/graphql/graphql-playground), point it to our GraphQL API's URL, and try executing the following query:
 
 ```graphql
 {
@@ -361,14 +381,263 @@ If you received the `SECURITY_NOT_AUTHORIZED` error, that means authorization wa
 
 On the other hand, if a valid `Authorization` request header is included, or in other words, the current identity actually has access to the car manufacturers module, the data should correctly be returned.
 
-To do that, we can simply create a new user via the Security / Users section, and either give it the Full Access security group, or the newly created
+To manually test that, we can simply create a new user via the Security / Users section, and either put it into the Full Access security group, or even better, into the newly created Car Manufacturers security group. Which is what the following screenshot is showing:
 
 <CenteredImage alt="Create a Test User" src={createTestUser} />
+
+Once we've created the user, we can log in into the Webiny Admin Area with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client, simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us.
+
+:::warning
+Learn more about the API Playground GraphQL client in the API Playground guide.
+:::
+
+So, as we can see in the following screenshot, the GraphQL query was successful, as we've successfully received the car manufacturer data in the response:
+
+<CenteredImage alt="GraphQL Authorization Success" src={graphqlAuthSuccess} />
+
+This means that the user we're currently logged in with has the appropriate security permissions, and that the newly added authorization code works as expected.
 
 ## Securing Admin Area Module
 
 Let's wrap up this tutorial by adding authorization checks in the actual user interface. What we want to achieve is having a piece of UI hide if the currently logged-in user doesn't have access to it (doesn't have necessary security permissions).
 
+For example, by completing the previous [Admin Area Package](/docs/tutorials/create-an-application/admin-area-package) tutorial, in our Webiny Admin Area, we should have the following item in the main menu:
+
+<CenteredImage alt="Main Menu - Car Manufacturers Module" src={carManufacturersMenuItem} />
+
+So, what we want to achieve here is the following:
+
+- if the user is allowed to access the Car Manufacturers module, then make the menu item visible
+- otherwise, if the user isn't allowed to access it, keep the menu item hidden
+
+Note that when we say "has access", specifically in this case, we're going to check whether the user at least has the "read" permission.
+
+The code for these menu items is located in the scaffolded `packages/car-manufacturers/admin-app/src/menus.tsx` file. So, in there, we can add the following code:
+
+```tsx title="packages/car-manufacturers/admin-app/src/menus.tsx" {4,10-32}
+import React from "react";
+import { AdminMenuPlugin } from "@webiny/app-admin/types";
+import { ReactComponent as Icon } from "./assets/directions_car-24px.svg";
+import { useSecurity } from "@webiny/app-security";
+
+export default (): AdminMenuPlugin => ({
+    type: "admin-menu",
+    name: "admin-menu-car-manufacturers",
+    render({ Menu, Item }) {
+        const { identity } = useSecurity();
+
+        // We get the "car-manufacturers" permission from current identity (logged in user).
+        const permission = identity.getPermission("car-manufacturers");
+        if (!permission) {
+            return null;
+        }
+
+        // Note that the received permission object can also be `{ name: "*" }`. If so, that
+        // means we are dealing with the super admin, who has unlimited access.
+        let hasAccess = permission.name === "*";
+        if (!hasAccess) {
+            // If not super admin, let's check if we have the "r" in the `rwd` property.
+            hasAccess =
+                permission.name === "car-manufacturers" &&
+                permission.rwd &&
+                permission.rwd.includes("r");
+        }
+
+        // Finally, if current identity doesn't have access, we immediately exit.
+        if (!hasAccess) {
+            return null;
+        }
+
+        return (
+            <Menu name="menu-car-manufacturers" label={"Car Manufacturers"} icon={<Icon />}>
+                <Item label={"Car Manufacturers"} path={"/car-manufacturers/"} />
+            </Menu>
+        );
+    }
+});
+```
+
+:::info
+In order to conditionally render the Car Manufacturers menu items, we are using the [`useSecurity`](https://github.com/webiny/webiny-js/blob/next/packages/app-security/src/hooks/useSecurity.ts) React hook, imported from the [`@webiny/app-security`](https://github.com/webiny/webiny-js/tree/next/packages/app-security) package.
+:::
+
+As you may have noticed, we're using the exact same logic and code, that we previously used while trying to secure the `getCarManufacturer` GraphQL resolver function. The only thing that's different is the way we fetch the currently logged in identity's permission. Here, we are using the `useSecurity` React hook in order to first get the identity, and then, via the `getPermission` method, the `car-manufacturers` permission.
+
+In order to manually test this, we can just log in with a user that doesn't belong to the Car Manufacturers security group. In that case, if everything was done correctly, we should not be able to see the Car Manufacturers menu item:
+
+<CenteredImage alt="Main Menu - Car Manufacturers Module (Hidden)" src={carManufacturersMenuItemHidden} />
+
+And while this is much better than what we had earlier, note that the actual route, to which the Car Manufacturers menu item linked, is still accessible. In other words, if a user tried to enter the `/car-manufacturers` URL path into the browser manually, the view would still be shown. This is simply because the route itself isn't secured.
+
+To do that, let's jump to the `packages/car-manufacturers/admin-app/src/routes.tsx` file, in which we're going to wrap our all of our child React components with the `SecureRoute` component:
+
+```tsx title="packages/car-manufacturers/admin-app/src/routes.tsx" {7,23-26,35}
+import React, { Suspense, lazy } from "react";
+import Helmet from "react-helmet";
+import { Route } from "@webiny/react-router";
+import { RoutePlugin } from "@webiny/app/types";
+import { CircularProgress } from "@webiny/ui/Progress";
+import { AdminLayout } from "@webiny/app-admin/components/AdminLayout";
+import { SecureRoute } from "@webiny/app-security/components";
+
+const Loader = ({ children, ...props }) => (
+    <Suspense fallback={<CircularProgress />}>{React.cloneElement(children, props)}</Suspense>
+);
+
+const CarManufacturers = lazy(() => import("./views/CarManufacturers"));
+
+export default (): RoutePlugin => ({
+    type: "route",
+    name: "route-admin-car-manufacturers",
+    route: (
+        <Route
+            path={"/car-manufacturers"}
+            exact
+            render={() => (
+                // In order to be able to access this route, the logged in user needs to
+                // have the "car-manufacturers" permission. We don't inspect the extra
+                // properties it may hold, we do that within rendered child components.
+                <SecureRoute permission={"car-manufacturers"}>
+                    <AdminLayout>
+                        <Helmet>
+                            <title>Car Manufacturers</title>
+                        </Helmet>
+                        <Loader>
+                            <CarManufacturers />
+                        </Loader>
+                    </AdminLayout>
+                </SecureRoute>
+            )}
+        />
+    )
+});
+```
+
+:::info
+In order to conditionally render the `/car-manufacturers` route, we are using the [`SecureRoute`](https://github.com/webiny/webiny-js/blob/next/packages/app-security/src/components/SecureRoute.tsx) React component, imported from the [`@webiny/app-security`](https://github.com/webiny/webiny-js/tree/next/packages/app-security) package.
+:::
+
+So, with this newly added code in place, by entering the mentioned `/car-manufacturers` URL path into the browser, we'd receive the following:
+
+<CenteredImage alt="Cannot Access Route - Not Authorized Message" src={routeNotAuthorized} />
+
+And that's how you secure your routes. Note that we've only checking if the logged in user possesses the `car-manufacturers` permission. And although that's not a very authorization specific check, we can still consider is it as enough, since we can perform more specific checks within the rendered child React components.
+
+As a final example, let's see how we can hide the New Car Manufacturer button, for users that don't posses the **write** permission.
+
+<CenteredImage alt='Hiding the "New Car Manufacturer Button"' src={hidingNewButton} />
+
+To do that, let's jump to the `CarManufacturersDataList` React component (`packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx`), in which we're going to wrap the `ButtonSecondary` component with the `SecureView` component:
+
+```tsx title="packages/car-manufacturers/admin-app/src/views/CarManufacturersDataList.tsx" {4,23-45,55-56}
+import React, { useCallback, useEffect, useMemo } from "react";
+(...)
+
+import { SecureView } from "@webiny/app-security/components";
+
+(...)
+
+const CarManufacturersDataList: React.FunctionComponent<Props> = ({
+    sortBy,
+    setSortBy,
+    limit,
+    sorters
+}) => {
+
+    (...)
+
+    return (
+        <DataList
+            loading={loading}
+            title={t`CarManufacturers`}
+            data={data}
+            actions={
+                {/* The SecureView component conditionally renders child components
+                (depending on the result of the permissions check we provided) */}
+                <SecureView permission={"car-manufacturers"}>
+                    {({ permission }) => {
+                        if (!permission) {
+                            return null;
+                        }
+
+                        // Note that the received permission object can also be `{ name: "*" }`. If so, that
+                        // means we are dealing with the super admin, who has unlimited access.
+                        let hasAccess = permission.name === "*";
+                        if (!hasAccess) {
+                            // If not super admin, let's check if we have the "r" in the `rwd` property.
+                            hasAccess =
+                                permission.name === "car-manufacturers" &&
+                                permission.rwd &&
+                                permission.rwd.includes("r");
+                        }
+
+                        // Finally, if current identity doesn't have access, we immediately exit.
+                        if (!hasAccess) {
+                            return null;
+                        }
+
+                        return (
+                            <ButtonSecondary
+                                data-testid="new-carManufacturer-button"
+                                onClick={() => history.push("/car-manufacturers/?new=true")}
+                            >
+                                <ButtonIcon icon={<AddIcon />} /> {t`New Car Manufacturer`}
+                            </ButtonSecondary>
+                        );
+                    }}
+                </SecureView>
+            }
+            modalOverlay={sortOverlay}
+            modalOverlayAction={<DataListModalOverlayAction icon={<FilterIcon />} />}
+        >
+            {({ data }: DataListChildProps) => (
+                <ScrollList data-testid="carManufacturer-data-list">
+                    {(data || []).map(item => (
+                        <ListItem key={item.id} selected={item.id === id}>
+                            <ListItemText
+                                onClick={() => history.push(`/carManufacturers?id=${item.id}`)}
+                            >
+                                {item.title}
+                                {item.description && (
+                                    <ListItemTextSecondary>
+                                        {item.description}
+                                    </ListItemTextSecondary>
+                                )}
+                            </ListItemText>
+
+                            <ListItemMeta>
+                                <ListActions>
+                                    <DeleteIcon onClick={() => deleteCarManufacturerItem(item)} />
+                                </ListActions>
+                            </ListItemMeta>
+                        </ListItem>
+                    ))}
+                </ScrollList>
+            )}
+        </DataList>
+    );
+};
+
+export default CarManufacturersDataList;
+```
+
+:::info
+In order to conditionally render the New Car Manufacturer button, we are using the [`SecureView`](https://github.com/webiny/webiny-js/blob/next/packages/app-security/src/components/SecureView.tsx) React component, imported from the [`@webiny/app-security`](https://github.com/webiny/webiny-js/tree/next/packages/app-security) package.
+:::
+
+And again, with this newly added code in place, we should no longer see the New Car Manufacturer button if the user doesn't posses the **write** permission.
+
+<CenteredImage alt='Hiding the "New Car Manufacturer Button" (Hidden)' src={hidingNewButtonHidden} />
+
+And that's how we can use the `SecureRoute` React component to conditionally render a React component.
+
+With it, we've covered all of the possible ways you can perform authorization checks:
+
+- the `useSecurity` React hook
+- the `SecureRoute` React component
+- the `SecureView` React component
+
+These utilities will not only help you while extending the Webiny Admin Area, but also in any custom React application you might be working on. To learn more about how to use these in custom React application development, please check out the dedicated article (coming soon).
 
 ## FAQ
 
