--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -24,19 +24,16 @@ import hidingNewButton from "./assets/hiding-new-button.png";
 import hidingNewButtonHidden from "./assets/hiding-new-button-hidden.png";
 
 :::tip What you'll learn
-- what are security permissions and, on the code level, security permissions objects
-- how to secure your application:
-    - prevent unauthorized users from performing sensitive GraphQL API queries and mutations
-    - prevent unauthorized users from seeing user-interface sections
+- prevent unauthorized users from performing sensitive GraphQL API queries and mutations
 :::
 
-## Securing GraphQL API Resolvers
+## Overview
 
-:::warning
-yarn webiny watch negdje ubaciti
+:::info
+The code that we will cover in this tutorial can also be found in our [GitHub examples repository](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/api).
 :::
 
-At the moment, the `carManufacturers` queries and mutations, that we added to our main GraphQL API in the [API Package tutorial](/docs/tutorials/create-an-application/api-package), are publicly exposed.
+At the moment, the `carManufacturers` queries and mutations, that we added to our main GraphQL API in the [API Package](/docs/tutorials/create-an-application/api-package) tutorial, are publicly exposed.
 
 For example, if were to perform a simple `listCarManufacturers` GraphQL query, we would receive a list of all car manufacturers:
 
@@ -48,7 +45,9 @@ Even more important, anybody can create new car manufacturers, with the `createC
 
 In most cases, this is not the desirable behaviour, and you'll certainly want to have control over who can perform these GraphQL operations, and who cannot.
 
-In order to secure these, we have to revisit the GraphQL resolver functions that were generated for us via the **GraphQL API package** scaffold.
+## Securing GraphQL API Resolvers
+
+In order to secure our GraphQL API, we have to revisit the GraphQL resolver functions that were generated for us via the **GraphQL API package** scaffold.
 
 :::info
 Learn more about GraphQL resolver functions in the official GraphQL [documentation article](https://graphql.org/learn/execution/).
@@ -76,16 +75,21 @@ All of the GraphQL resolver functions are located in the `packages/car-manufactu
 
 For purposes of this tutorial, we can open the simplest resolver, which is the `getCarManufacturer.ts`, and add the following lines of code:
 
-```ts title="packages/car-manufacturers/api/src/resolvers/getCarManufacturer.ts" {2,17-37}
+```ts title="packages/car-manufacturers/api/src/resolvers/getCarManufacturer.ts" {2,4-5,13,14,22-51}
 import { Response, NotFoundResponse } from "@webiny/handler-graphql";
 import { NotAuthorizedResponse } from "@webiny/api-security";
+
+// We use this when specifying the return types of the getPermission function call (below).
+import { FullAccessPermission } from "@webiny/api-security/types";
 
 import { utils } from "../utils";
 import {
     ApplicationContext,
     GetCarManufacturerArgs,
     ResolverResponse,
-    CarManufacturer
+    CarManufacturer,
+    // Creating types for security permissions makes our code less error-prone and more readable.
+    CarManufacturersPermission
 } from "../types";
 
 const getCarManufacturer = async (
@@ -93,8 +97,17 @@ const getCarManufacturer = async (
     args: GetCarManufacturerArgs,
     context: ApplicationContext
 ): Promise<ResolverResponse<CarManufacturer>> => {
-    // We get the "car-manufacturers" permission from current identity (logged in user).
-    const permission = await context.security.getPermission("car-manufacturers");
+    // First, check if the current identity can perform the "getCarManufacturer" query,
+    // within the detected locale. An error will be thrown if access is not allowed.
+    await context.i18nContent.checkI18NContentPermission();
+
+    // Next, check if the current identity possesses the "car-manufacturers" permission.
+    // Note that, if the identity has full access, "FullAccessPermission" permission
+    // will be returned instead, which is equal to: { name: "*"}.
+    const permission = await context.security.getPermission<
+        CarManufacturersPermission | FullAccessPermission
+        >("car-manufacturers");
+
     if (!permission) {
         return new NotAuthorizedResponse();
     }
@@ -133,7 +146,7 @@ const getCarManufacturer = async (
     const [item] = items;
 
     if (!item) {
-        return new NotFoundResponse(`Car manufacturer with id "${id}" not found.`);
+        return new NotFoundResponse(`CarManufacturer with id "${id}" not found.`);
     }
 
     return new Response(item);
@@ -141,6 +154,10 @@ const getCarManufacturer = async (
 
 export default getCarManufacturer;
 ```
+
+:::tip
+If you're curious about the `CarManufacturersPermission` type, check its definition in [packages/car-manufacturers/api/src/types.ts:173](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/security/packages/car-manufacturers/api/src/types.ts#L173).
+:::
 
 Now, to see this new piece of authorization logic in action, we can use a GraphQL client, for example the [GraphQL Playground](https://github.com/graphql/graphql-playground), point it to our GraphQL API's URL, and try executing the following query:
 
@@ -174,13 +191,13 @@ Without including the appropriate `Authorization` request header, we should rece
 
 If you received the `SECURITY_NOT_AUTHORIZED` error, that means authorization was successful.
 
-On the other hand, if a valid `Authorization` request header is included, or in other words, the current identity actually has access to the car manufacturers module, the data should correctly be returned.
+On the other hand, if a valid `Authorization` request header is included, or in other words, the current identity actually has access to the Car Manufacturers module, the data should correctly be returned.
 
-To manually test that, we can simply create a new user via the Security / Users section, and either put it into the Full Access security group, or even better, into the newly created Car Manufacturers security group. Which is what the following screenshot is showing:
+To manually test that, we can simply create a new user via the Webiny Security application, and either place it into the default Full Access security group, or even better, into the newly created Car Manufacturers security group. Which is what the following screenshot is showing:
 
 <CenteredImage alt="Create a Test User" src={createTestUser} />
 
-Once we've created the user, we can log in into the Webiny Admin Area with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client, simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us.
+Once we've created the user, we can log in into the Webiny Admin Area with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us. In other words, it will perform GraphQL operations as the currently logged in user.
 
 :::warning
 Learn more about the API Playground GraphQL client in the API Playground guide.
@@ -191,6 +208,10 @@ So, as we can see in the following screenshot, the GraphQL query was successful,
 <CenteredImage alt="GraphQL Authorization Success" src={graphqlAuthSuccess} />
 
 This means that the user we're currently logged in with has the appropriate security permissions, and that the newly added authorization code works as expected.
+
+## Final Notes
+
+Before we wrap this up, note that this is just a single resolver we secured, and that you should implement the same logic into [others](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/api/src/resolvers) as well. Also, in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself) and our code will be more maintainable and less error-prone.
 
 ## FAQ
 
