wip: create secure your app tutorial

--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -224,3 +224,19 @@ For now, know that we will need to take this into account while performing the a
 #### Can I assign multiple security groups to a single identity (user)?
 
 No, you can't. Every identity can be part of exactly one security group. If you are in a situation where you need to assign multiple security groups to an identity, you'll need to create a new security group, that consist of all permissions that are assigned to the initial two.
+
+#### What does the `rwd` stand for?
+
+It stands for read, write, and delete.
+
+#### Can I define my security permission objects differently from what it's used this tutorial?
+
+Yes. The `rwd` and `hasSpecialFeature` properties are not required and you can define your security permission objects in any way you like or need. For example, if you don't prefer the `rwd` approach we showed here, you could create standalone `hasRead`, `hasWrite`, and `hasDelete` properties instead.
+
+We just thought the `rwd` approach is lightweight and simple to understand.
+
+#### Is it possible to create a checkbox which would immediately allow full access to my module?
+
+Sometimes, permissions sections may grow in size. And in that case, it might be easier to have a simple checkbox that would enable full access to your module, instead of having the user click through all of the available permissions.
+
+So, if you've reached this point, then it might make sense to extend your security permissions object, with a special boolean `fullAccess` property, and take that into account while performing backend and frontend authorization (covered in following sections of this tutorial).
