--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -43,7 +43,7 @@ In order to secure our GraphQL API, we have to revisit the GraphQL resolver func
 Learn more about GraphQL resolver functions in the official GraphQL [documentation article](https://graphql.org/learn/execution/).
 :::
 
-All of the GraphQL resolver functions are located in the `packages/car-manufacturers/api/src/resolvers/` folder:
+All of the GraphQL resolver functions are located in the [`packages/car-manufacturers/api/src/resolvers`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/security/packages/car-manufacturers/api/src/resolvers) folder:
 
 ```bash title="packages/car-manufacturers/api/"
 .
@@ -63,7 +63,7 @@ All of the GraphQL resolver functions are located in the `packages/car-manufactu
         └── updateCarManufacturer.ts
 ```
 
-For purposes of this tutorial, we can open the simplest resolver, which is the `getCarManufacturer.ts`, and add the following lines of code:
+For purposes of this tutorial, we can open the simplest resolver, which is the [`getCarManufacturer.ts`](https://github.com/webiny/webiny-examples/blob/master/extend-admin-area/security/packages/car-manufacturers/api/src/resolvers/getCarManufacturer.ts), and add the following lines of code:
 
 ```ts title="packages/car-manufacturers/api/src/resolvers/getCarManufacturer.ts" {2,4-5,13,14,22-54}
 import { Response, NotFoundResponse } from "@webiny/handler-graphql";
@@ -192,7 +192,7 @@ To manually test that, we can simply create a new user via the Webiny Security a
 
 Once we've created the user, we can log in into the Webiny Admin Area with it (using its username and password), and execute the same GraphQL query, this time using the built-in API Playground. We will use this client simply because of the fact that, upon issuing GraphQL operations, it will automatically attach the correct `Authorization` request header for us. In other words, it will perform GraphQL operations as the currently logged in user.
 
-:::warning
+:::warning TODO - Create API "Playground short" guide
 Learn more about the API Playground GraphQL client in the API Playground guide.
 :::
 
@@ -204,10 +204,14 @@ This means that the user we're currently logged in with has the appropriate secu
 
 ## Final Notes
 
-Before we wrap this up, note that this is just a single resolver we secured, and that you should implement the same logic into [others](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/api/src/resolvers) as well. Also, in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself) and our code will be more maintainable and less error-prone.
+Before we wrap this up, note that this is just a single resolver we secured, and that you should implement the same logic into [others](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/api/src/resolvers) as well.
+
+Finally, in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself) and our code will be more maintainable and less error-prone.
 
 ## FAQ
 
-#### Can I assign multiple security groups to a single identity (user)?
+#### I'm not building a multi-locale Admin Area module.
 
-No, you can't. Every identity can be part of exactly one security group. If you are in a situation where you need to assign multiple security groups to an identity, you'll need to create a new security group, that consist of all permissions that are assigned to the initial two.
+If you're not building a multi-locale module, feel free to skip the `await context.i18nContent.hasI18NContentPermission();` checks in your GraphQL resolvers and simply start with your own authorization checks.
+
+But of course, be aware that if your project ends up being multi-locale, then users will be able to execute your GraphQL resolvers in every created locale (unless they are prevented by your custom authorization logic).
