wip: create secure your app tutorial

--- a/docs/tutorials/create-an-application/security/graphql-api.mdx
+++ b/docs/tutorials/create-an-application/security/graphql-api.mdx
@@ -206,7 +206,7 @@ This means that the user we're currently logged in with has the appropriate secu
 
 Before we wrap this up, note that this is just a single resolver we secured, and that you should implement the same logic into [others](https://github.com/webiny/webiny-examples/tree/master/extend-admin-area/security/packages/car-manufacturers/api/src/resolvers) as well.
 
-Finally, in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself) and our code will be more maintainable and less error-prone.
+Finally, in case you start seeing yourself copying some of the authorization related code, it's certainly recommended that you extract it into one or more separate utility functions. This way we're not repeating our selves ([DRY](https://en.wikipedia.org/wiki/Don%27t_repeat_yourself)) and our code will be more maintainable and less error-prone.
 
 ## FAQ
 
