--- a/docs/tutorials/create-an-application/security/introduction.mdx
+++ b/docs/tutorials/create-an-application/security/introduction.mdx
@@ -14,7 +14,7 @@ import contentLocaleSection from "./assets/content-locale-section.png";
 import securityGroupsModule from "./assets/security-groups-module.png";
 
 :::tip What you'll learn
-- what are security permissions and, on the code level, security permissions objects
+- what are security permissions and, on the code level, security permission objects
 - how to add a new permissions section to the Webiny Security application's security group form
 :::
 
